Добавление строки с почтой

--- a/Это МЫ.html
+++ b/Это МЫ.html
@@ -26,6 +26,7 @@
       </section>
     <button>Контакты</button>
      <h1 class="header__title">Света 89199269668</h1>
+     <h1 class="header__title">tmn.supply@yandex.ru</h1>
     <script type="text/javascript" src="js.js"></script>
   </body>
 </html>
